refactor TimeFactorProcess to use SeoData record for improved SEO data handling and readability